<?xml version="1.0"?>
<package format="2">
  <name>downward</name>
  <version>0.0.1</version>
  <description>The fast-downward package</description>

  <maintainer email="karoly.istvan.artur@gmail.com">Artur Istvan Karoly</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>fast_downward_msgs</exec_depend>

  

  <export>
  </export>
</package>
